add CNAME, title, description, allow indexing

--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -5,6 +5,7 @@ const {title} = Astro.props
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <meta name="description" content="A selection of work from UI Developer Greg Kohn">
 
   <title>{title}</title>
   
