--- a/src/components/project-card.astro
+++ b/src/components/project-card.astro
@@ -14,7 +14,7 @@ let { heading, url, image, date, datetime, highlights } = Astro.props
     <a
       href={url}
       class={cx(
-        'group block max-w-520 flex-shrink-0 relative rounded-xl shadow-lg overflow-hidden',
+        'group block max-w-520 flex-shrink-0 relative z-1 rounded-xl shadow-lg overflow-hidden',
         'animate-zoom-in transition duration-700',
         'sm:w-1/2',
       )}
