--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -60,7 +60,7 @@ import CircleArrowIcon from '../icons/circle-arrow-right.astro'
       opacity: 0;
       transform: translateY(20px) scale(0.85);
     }
-    
+
     to {
       filter: blur(0);
       opacity: 1;
@@ -74,7 +74,7 @@ import CircleArrowIcon from '../icons/circle-arrow-right.astro'
       opacity: 0;
       transform: translateY(-20px) scale(0.85);
     }
-    
+
     to {
       filter: blur(0);
       opacity: 1;
@@ -111,20 +111,22 @@ import CircleArrowIcon from '../icons/circle-arrow-right.astro'
       )}
       aria-hidden="true"
     >
-      <span>G</span><span>R</span><span>E</span><b>G</b><b>/</b><b>K</b><span>O</span><span>H</span><span>N</span>
+      <span>G</span><span>R</span><span>E</span><b>G</b><b>/</b><b>K</b><span
+        >O</span
+      ><span>H</span><span>N</span>
     </div>
-    
+
     <p class="job-title mt-56 py-8 xs:text-21">
-      Senior UI Developer
+      Senior Frontend Engineer
       <span class="text-white text-opacity-30">@</span>
       <a
-        href="https://viget.com/"
+        href="https://acrehomes.com/"
         class={cx(
           'underline decoration-[color:rgba(255,255,255,0.3)] decoration-2 underline-offset-4',
           'transition-[text-decoration-color] duration-200 hover:decoration-white'
         )}
       >
-        Viget
+        Acre
       </a>
     </p>
   </div>
