--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -1,34 +1,48 @@
 ---
-const {title} = Astro.props
+const { title } = Astro.props
+const year = new Date().getFullYear()
 ---
+
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="description" content="A selection of work from UI Developer Greg Kohn">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="A selection of work from UI Developer Greg Kohn"
+    />
 
-  <title>{title}</title>
-  
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="stylesheet" type="text/css" href={Astro.resolve('../css/global.css')}>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Prata&family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+    <title>{title}</title>
 
-  <script type="module" src={Astro.resolve('../js/index.js')}></script>
-</head>
-<body
-  class="bg-zinc-900 text-white font-sans antialiased"
-  data-controller="animate-observer"
->
-  <main>
-    <slot />
-  </main>
-  <footer class="bg-black bg-opacity-10 mt-200 p-16 text-center text-white text-opacity-50">
-    &copy; 2021 Greg Kohn
-  </footer>
-</body>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href={Astro.resolve('../css/global.css')}
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Prata&family=Rubik:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+
+    <script type="module" src={Astro.resolve('../js/index.js')}></script>
+  </head>
+  <body
+    class="bg-zinc-900 text-white font-sans antialiased"
+    data-controller="animate-observer"
+  >
+    <main>
+      <slot />
+    </main>
+    <footer
+      class="bg-black bg-opacity-10 mt-200 p-16 text-center text-white text-opacity-50"
+    >
+      &copy; {year} Greg Kohn
+    </footer>
+  </body>
 </html>
