--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -116,7 +116,19 @@ import CircleArrowIcon from '../icons/circle-arrow-right.astro'
       ><span>H</span><span>N</span>
     </div>
 
-    <p class="mt-56 py-8 xs:text-21">Senior Frontend Engineer</p>
+    <p class="mt-56 py-8 xs:text-21">
+      Senior Frontend Engineer
+      <span class="text-white text-opacity-30">@</span>
+      <a
+        href="https://acrehomes.com"
+        class={cx(
+          'underline decoration-[color:rgba(255,255,255,0.3)] decoration-2 underline-offset-4',
+          'transition-[text-decoration-color] duration-200 hover:decoration-white'
+        )}
+      >
+        Acre
+      </a>
+    </p>
   </div>
   <div class="absolute bottom-32 inset-x-0">
     <CircleArrowIcon
